# Flask-MongoDB-template

./: .env.example  README.md  app.py  pyproject.toml  requirements.txt
app/: __init__.py  database.py  error_handler.py  loggin_config.py  logging_config.py
app/config/: __init__.py
app/database/: mongo_database.py
app/exception/: __init__.py  conflict_exception.py  core_exception.py  not_found_exception.py
app/models/: __init__.py  user.py
app/models/input/: __init__.py  user_input.py
app/models/output/: __init__.py  base_output.py  paginatation.py  user_output.py
app/repositories/: __init__.py  base_repository.py  user_repository.py
app/routes/: user_routes.py
app/services/: user_service.py
